tests/neg/i1424.scala
class Test {
  (x: Int) => x // error: not a legal self type clause // error: package x is not a value // error: package x is not a value
}
